Fixed error page image overflow on small screens

--- a/src/pages/Error.css
+++ b/src/pages/Error.css
@@ -18,6 +18,8 @@
 	margin-left: auto;
 	margin-right: auto;
 	border: 1px solid rgba(0, 0, 0, 0.5);
+	/* Don't overflow the page on mobile devices. */
+	max-width: 100%;
 }
 
 .error-page__requested-url {
